--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@nuxt/fonts": "^0.11.4",
+    "@pinia/nuxt": "^0.11.1",
     "@types/lodash-es": "^4.17.12",
     "@vueuse/core": "^13.2.0",
     "lodash-es": "^4.17.21",
     "nuxt": "^3.17.3",
+    "pinia": "^3.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
