--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@pinia/nuxt": "^0.11.1",
     "@types/lodash-es": "^4.17.12",
     "@vueuse/core": "^13.2.0",
+    "better-sqlite3": "^11.10.0",
     "lodash-es": "^4.17.21",
     "nuxt": "^3.17.3",
     "pinia": "^3.0.3",
