--- a/package.json
+++ b/package.json
@@ -13,16 +13,22 @@
     "@nuxt/fonts": "^0.11.4",
     "@pinia/nuxt": "^0.11.1",
     "@types/lodash-es": "^4.17.12",
+    "@types/sqlite3": "^5.1.0",
     "@vueuse/core": "^13.2.0",
     "better-sqlite3": "^11.10.0",
+    "cookie": "^1.0.2",
+    "keen-slider": "^6.8.6",
     "lodash-es": "^4.17.21",
     "nuxt": "^3.17.3",
+    "nuxt-svg-icon-sprite": "^2.0.0",
     "pinia": "^3.0.3",
+    "sqlite3": "^5.1.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e",
   "devDependencies": {
+    "@types/cookie": "^1.0.0",
     "sass": "^1.89.0"
   }
 }
