--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@vueuse/core": "^13.2.0",
     "better-sqlite3": "^11.10.0",
     "cookie": "^1.0.2",
+    "crossws": "^0.4.1",
     "keen-slider": "^6.8.6",
     "lodash-es": "^4.17.21",
     "nuxt": "^3.17.3",
+    "nuxt-qrcode": "^0.4.6",
     "nuxt-svg-icon-sprite": "^2.0.0",
     "pinia": "^3.0.3",
     "sqlite3": "^5.1.7",
